# TRIAGEAGENT

./: .env.example  .gitignore  .workflow  Dockerfile  README.md  ai_triage.py  api_integrations.py  data_storage.py  docker-compose.yml  engineer_assignment.py  main.py  mock_data.py  pyproject.toml  requirements.txt  run_local.ps1  triage_ai.py
.github/: copilot-instructions.md
.streamlit/: config.toml
config/: sample_config.json
docs/: EXECUTIVE_SUMMARY.md
scripts/: check_latest_assignments.py  inspect_tickets.py  print_assignment_counts.py  process_reassign.py  test_assign.py
tests/: test_workload_chart.py
